feat: Se realizan ajustes para agregar variable parametrizables en application.yml